Fix navbar colors

--- a/docs/_includes/examples/navbar-color.html
+++ b/docs/_includes/examples/navbar-color.html
@@ -1,7 +1,11 @@
 <nav class="navbar is-{{ include.color }}">
   <div class="navbar-brand">
     <a class="navbar-item" href="{{ site.url }}">
-      <img src="{{ site.url }}/images/bulma-logo-white.png" alt="Bulma: a modern CSS framework based on Flexbox" width="112" height="28">
+      {% if include.light %}
+        <img src="{{ site.url }}/images/bulma-logo.png" alt="Bulma: a modern CSS framework based on Flexbox" width="112" height="28">
+      {% else %}
+        <img src="{{ site.url }}/images/bulma-logo-white.png" alt="Bulma: a modern CSS framework based on Flexbox" width="112" height="28">
+      {% endif %}
     </a>
     <div class="navbar-burger burger" data-target="navMenuColor{{ include.color }}-example">
       <span></span>
