--- a/docs/documentation/components/navbar.html
+++ b/docs/documentation/components/navbar.html
@@ -1012,6 +1012,23 @@ document.addEventListener('DOMContentLoaded', function () {
       <span class="tag is-info">0.5.2</span>
     </div>
 
+    <div class="content">
+      <p>
+        You can change the background color of the <code>navbar</code> by using one of the <strong>9 color modifiers:</strong>
+      </p>
+      <ul>
+        <li><code>is-primary</code></li>
+        <li><code>is-info</code></li>
+        <li><code>is-success</code></li>
+        <li><code>is-warning</code></li>
+        <li><code>is-danger</code></li>
+        <li><code>is-black</code></li>
+        <li><code>is-dark</code></li>
+        <li><code>is-light</code></li>
+        <li><code>is-white</code></li>
+      </ul>
+    </div>
+
     {% highlight html %}{{ navbar_color_markup }}{% endhighlight %}
 
     <div class="bd-example is-paddingless">
@@ -1027,11 +1044,27 @@ document.addEventListener('DOMContentLoaded', function () {
     </div>
 
     <div class="bd-example is-paddingless">
-      {% include examples/navbar-color.html color="warning" %}
+      {% include examples/navbar-color.html color="warning" light=true %}
     </div>
 
     <div class="bd-example is-paddingless">
       {% include examples/navbar-color.html color="danger" %}
+    </div>
+
+    <div class="bd-example is-paddingless">
+      {% include examples/navbar-color.html color="black" %}
+    </div>
+
+    <div class="bd-example is-paddingless">
+      {% include examples/navbar-color.html color="dark" %}
+    </div>
+
+    <div class="bd-example is-paddingless">
+      {% include examples/navbar-color.html color="light" light=true %}
+    </div>
+
+    <div class="bd-example is-paddingless">
+      {% include examples/navbar-color.html color="white" light=true %}
     </div>
 
     {% include variables.html %}
