--- a/sass/components/panel.sass
+++ b/sass/components/panel.sass
@@ -96,6 +96,6 @@ label.panel-block
   +fa(14px, 1em)
   color: $panel-icon-color
   margin-right: 0.75em
-  .fa
+  .#{$icon-selector}
     font-size: inherit
     line-height: inherit
