--- a/sass/elements/form.sass
+++ b/sass/elements/form.sass
@@ -242,12 +242,12 @@ $help-size: $size-small !default
   &.is-medium
     font-size: $size-medium
     .file-icon
-      .fa
+      .#{$icon-selector}
         font-size: 21px
   &.is-large
     font-size: $size-large
     .file-icon
-      .fa
+      .#{$icon-selector}
         font-size: 28px
   // Modifiers
   &.has-name
@@ -273,16 +273,16 @@ $help-size: $size-small !default
     .file-icon
       height: 1.5em
       width: 1.5em
-      .fa
+      .#{$icon-selector}
         font-size: 21px
     &.is-small
-      .file-icon .fa
+      .file-icon .#{$icon-selector}
         font-size: 14px
     &.is-medium
-      .file-icon .fa
+      .file-icon .#{$icon-selector}
         font-size: 28px
     &.is-large
-      .file-icon .fa
+      .file-icon .#{$icon-selector}
         font-size: 35px
     &.has-name
       .file-cta
@@ -363,7 +363,7 @@ $help-size: $size-small !default
   justify-content: center
   margin-right: 0.5em
   width: 1em
-  .fa
+  .#{$icon-selector}
     font-size: 14px
 
 .label
