--- a/sass/elements/icon.sass
+++ b/sass/elements/icon.sass
@@ -9,21 +9,21 @@ $icon-dimensions-large: 3rem !default
   justify-content: center
   height: $icon-dimensions
   width: $icon-dimensions
-  .fa
+  .#{$icon-selector}
     font-size: 21px
   // Sizes
   &.is-small
     height: $icon-dimensions-small
     width: $icon-dimensions-small
-    .fa
+    .#{$icon-selector}
       font-size: 14px
   &.is-medium
     height: $icon-dimensions-medium
     width: $icon-dimensions-medium
-    .fa
+    .#{$icon-selector}
       font-size: 28px
   &.is-large
     height: $icon-dimensions-large
     width: $icon-dimensions-large
-    .fa
+    .#{$icon-selector}
       font-size: 42px
