--- a/sass/components/level.sass
+++ b/sass/components/level.sass
@@ -48,6 +48,9 @@
   flex-grow: 0
   flex-shrink: 0
   .level-item
+    // margin for icons
+    & > .icon
+      margin-right: 0.75rem
     // Modifiers
     &.is-flexible
       flex-grow: 1
