--- a/sass/components/breadcrumb.sass
+++ b/sass/components/breadcrumb.sass
@@ -21,6 +21,8 @@ $breadcrumb-item-separator-color: $text !default
     padding: 0.5em 0.75em
     &:hover
       color: $breadcrumb-item-hover-color
+    &:first-child
+      padding-left: 0
   li
     align-items: center
     display: flex
