Fix breadcrumb padding on first li

--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -4950,10 +4950,6 @@ a.tag:hover {
   color: #363636;
 }
 
-.breadcrumb a:first-child {
-  padding-left: 0;
-}
-
 .breadcrumb li {
   -webkit-box-align: center;
       -ms-flex-align: center;
@@ -4961,6 +4957,10 @@ a.tag:hover {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+}
+
+.breadcrumb li:first-child a {
+  padding-left: 0;
 }
 
 .breadcrumb li.is-active a {
