--- a/sass/components/breadcrumb.sass
+++ b/sass/components/breadcrumb.sass
@@ -21,11 +21,11 @@ $breadcrumb-item-separator-color: $text !default
     padding: 0.5em 0.75em
     &:hover
       color: $breadcrumb-item-hover-color
-    &:first-child
-      padding-left: 0
   li
     align-items: center
     display: flex
+    &:first-child a
+      padding-left: 0
     &.is-active
       a
         color: $breadcrumb-item-active-color
