--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -210,21 +210,21 @@ strong {
 }
 
 pre {
+  -webkit-overflow-scrolling: touch;
   background-color: whitesmoke;
   color: #4a4a4a;
   font-size: 0.875em;
+  overflow-x: auto;
+  padding: 1.25rem 1.5rem;
   white-space: pre;
   word-wrap: normal;
 }
 
 pre code {
-  -webkit-overflow-scrolling: touch;
-  background: none;
-  color: inherit;
-  display: block;
+  background-color: transparent;
+  color: currentColor;
   font-size: 1em;
-  overflow-x: auto;
-  padding: 1.25rem 1.5rem;
+  padding: 0;
 }
 
 table td,
@@ -11431,11 +11431,6 @@ html.route-index #carbon {
 .highlight pre {
   max-height: 320px;
   margin-bottom: 0 !important;
-  padding: 0;
-}
-
-.highlight pre code {
-  padding: 1.25em 1.5em;
 }
 
 .highlight-full:not(:last-child),
