--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -5504,6 +5504,15 @@ a.dropdown-item.is-active {
   margin-bottom: 1.5rem;
 }
 
+.message strong {
+  color: currentColor;
+}
+
+.message a:not(.button):not(.tag) {
+  color: currentColor;
+  text-decoration: underline;
+}
+
 .message.is-small {
   font-size: 0.75rem;
 }
@@ -5660,15 +5669,6 @@ a.dropdown-item.is-active {
   position: relative;
 }
 
-.message-header a:not(.button),
-.message-header strong {
-  color: currentColor;
-}
-
-.message-header a:not(.button) {
-  text-decoration: underline;
-}
-
 .message-header .delete {
   -webkit-box-flex: 0;
       -ms-flex-positive: 0;
@@ -5689,15 +5689,6 @@ a.dropdown-item.is-active {
   border-radius: 3px;
   color: #4a4a4a;
   padding: 1em 1.25em;
-}
-
-.message-body a:not(.button),
-.message-body strong {
-  color: currentColor;
-}
-
-.message-body a:not(.button) {
-  text-decoration: underline;
 }
 
 .message-body code,
