--- a/docs/documentation/components/message.html
+++ b/docs/documentation/components/message.html
@@ -56,7 +56,15 @@ variables:
     <p>Primary</p>
     <button class="delete" aria-label="delete"></button>
   </div>
-  <div class="message-body">
+  <div class="message-body"><span class="tag is-black">Black</span>
+<a class="tag is-dark">Dark</a>
+<a class="tag is-light">Light</a>
+<a class="tag is-white">White</a>
+<a class="tag is-primary">Primary</a>
+<a class="tag is-info">Info</a>
+<a class="tag is-success">Success</a>
+<a class="tag is-warning">Warning</a>
+<a class="tag is-danger">Danger</a>
     Lorem ipsum dolor sit amet, consectetur adipiscing elit. <strong>Pellentesque risus mi</strong>, tempus quis placerat ut, porta nec nulla. Vestibulum rhoncus ac ex sit amet fringilla. Nullam gravida purus diam, et dictum <a>felis venenatis</a> efficitur. Aenean ac <em>eleifend lacus</em>, in mollis lectus. Donec sodales, arcu et sollicitudin porttitor, tortor urna tempor ligula, id porttitor mi magna a neque. Donec dui urna, vehicula et sem eget, facilisis sodales sem.
   </div>
 </article>
