--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -2641,6 +2641,12 @@ a.box:active {
   border-radius: 290486px;
 }
 
+.input[readonly],
+.textarea[readonly] {
+  -webkit-box-shadow: none;
+          box-shadow: none;
+}
+
 .input.is-white,
 .textarea.is-white {
   border-color: white;
@@ -2793,6 +2799,15 @@ a.box:active {
 .textarea.is-inline {
   display: inline;
   width: auto;
+}
+
+.input.is-static {
+  background-color: transparent;
+  border-color: transparent;
+  -webkit-box-shadow: none;
+          box-shadow: none;
+  padding-left: 0;
+  padding-right: 0;
 }
 
 .textarea {
