--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -5089,6 +5089,12 @@ a.tag:hover {
   padding: 0.75rem;
 }
 
+.card-header-title.is-centered {
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
 .card-header-icon {
   -webkit-box-align: center;
       -ms-flex-align: center;
