--- a/docs/documentation/components/card.html
+++ b/docs/documentation/components/card.html
@@ -154,6 +154,17 @@ variables:
       </ul>
     </div>
 
+    <div class="tags has-addons">
+      <span class="tag">New</span>
+      <span class="tag is-info">0.5.3</span>
+    </div>
+
+    <div class="content">
+      <p>
+        You can center the <code>card-header-title</code> by appending the <code>is-centered</code> modifier.
+      </p>
+    </div>
+
     <hr>
 
     <div class="columns">
