Remove binding between $primary-invert and $turquoise-invert
In the derived-variables.sass `$primary-invert` is assigned the default primary inverted color, while if you change the primary it should change, it actually doesn't because it is hardcoded to equal turquoise. Modified so that `$primary` changes affect `$primary-invert`.

--- a/sass/utilities/derived-variables.sass
+++ b/sass/utilities/derived-variables.sass
@@ -18,7 +18,7 @@ $blue-invert: findColorInvert($blue) !default
 $purple-invert: findColorInvert($purple) !default
 $red-invert: findColorInvert($red) !default
 
-$primary-invert: $turquoise-invert !default
+$primary-invert: findColorInvert($primary) !default
 $info-invert: $blue-invert !default
 $success-invert: $green-invert !default
 $warning-invert: $yellow-invert !default
