--- a/sass/utilities/derived-variables.sass
+++ b/sass/utilities/derived-variables.sass
@@ -19,12 +19,12 @@ $purple-invert: findColorInvert($purple) !default
 $red-invert: findColorInvert($red) !default
 
 $primary-invert: findColorInvert($primary) !default
-$info-invert: $blue-invert !default
-$success-invert: $green-invert !default
-$warning-invert: $yellow-invert !default
-$danger-invert: $red-invert !default
-$light-invert: $dark !default
-$dark-invert: $light !default
+$info-invert: findColorInvert($blue) !default
+$success-invert: findColorInvert($green) !default
+$warning-invert: findColorInvert($yellow) !default
+$danger-invert: findColorInvert($red) !default
+$light-invert: findColorInvert($dark) !default
+$dark-invert: findColorInvert($light) !default
 
 // General colors
 
