added custom variables for navbar, dropdown

--- a/bulma.sass
+++ b/bulma.sass
@@ -3,6 +3,38 @@
 @import "sass/utilities/_all"
 @import "sass/base/_all"
 @import "sass/elements/_all"
-@import "sass/components/_all"
+
+// Custom variables related to components/dropdown.sass
+$dropdown-content-background-color: #3B739E
+$dropdown-content-arrow: none
+$dropdown-item-color: rgba(255, 255, 255, 0.7)
+$dropdown-item-hover-color: #F3FFFC
+
+@import "bulma/components/dropdown.sass"
+@import "bulma/components/level.sass"
+@import "bulma/components/media.sass"
+@import "bulma/components/menu.sass"
+@import "bulma/components/message.sass"
+@import "bulma/components/modal.sass"
+@import "bulma/components/nav.sass"
+
+// Custom variables related to components/navbar.sass
+$navbar-background-color: transparent
+$navbar-item-color: rgba(255, 255, 255, 0.7)
+$navbar-item-hover-color: #F3FFFC
+$navbar-item-hover-background-color: transparent
+$navbar-item-active-color: #F3FFFC
+$navbar-dropdown-background-color: #3B739E
+$navbar-dropdown-arrow: none
+$navbar-dropdown-item-hover-color: #F3FFFC
+$navbar-dropdown-item-hover-background-color: #3B739E
+$navbar-dropdown-item-active-background-color: #3B739E
+
+@import "bulma/components/navbar.sass"
+@import "bulma/components/pagination.sass"
+@import "bulma/components/panel.sass"
+@import "bulma/components/tabs.sass"
+
+
 @import "sass/grid/_all"
 @import "sass/layout/_all"
