Set default width for container. Because it will create the page "http://bulma.io/documentation/modifiers/syntax/" look "Bulma Partners Check out their products!" text.

--- a/sass/elements/container.sass
+++ b/sass/elements/container.sass
@@ -1,6 +1,7 @@
 .container
   margin: 0 auto
   position: relative
+  width: 100%
   +from($desktop)
     max-width: $desktop - (2 * $gap)
     width: $desktop - (2 * $gap)
