Add footer variables in relevant docs page

--- a/docs/documentation/layout/footer.html
+++ b/docs/documentation/layout/footer.html
@@ -3,6 +3,9 @@ title: Footer
 layout: documentation
 doc-tab: layout
 doc-subtab: footer
+variables:
+- name: $footer-background-color
+  value: $background
 ---
 
 {% include subnav-layout.html %}
@@ -51,5 +54,7 @@ doc-subtab: footer
   </div>
 </footer>
 {% endhighlight %}
+
+    {% include variables.html layout=true %}
   </div>
 </section>
