Fix typo "modifer" to "modifier" in all docs

--- a/docs/versions/0.5.1/documentation/components/navbar/index.html
+++ b/docs/versions/0.5.1/documentation/components/navbar/index.html
@@ -1368,7 +1368,7 @@
 
     <div class="content">
       <p>
-        To seamlessly integrate the navbar in any visual context, you can add the <code>is-transparent</code> modifer on the <code>navbar</code> component. This will remove any hover or active background from the navbar items.
+        To seamlessly integrate the navbar in any visual context, you can add the <code>is-transparent</code> modifier on the <code>navbar</code> component. This will remove any hover or active background from the navbar items.
       </p>
     </div>
 
